objects/Qualtrics_Survey_Response__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Qualtrics Survey Responses</relationshipLabel>
        <relationshipName>Qualtrics_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <label>NPS</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Representative_Rating__c</fullName>
        <label>Representative Rating</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Results__c</fullName>
        <label>Survey Results</label>
        <type>Url</type>
    </fields>
    <label>Qualtrics Survey Response</label>
    <nameField>
        <label>Qualtrics Survey Response  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qualtrics Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>